@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1404 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1405 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -633,3 +633,4 @@ Changes from NetBSD 5.0 to NetBSD 6.0:
 	ofppc: Support Gigabit Ethernet Controller for MV64361 on PegasosII
 		by mvgbe@gt.  [kiyohara 20100609]
 	arm: Added support for Cortex-A8 CPUs. [jmcneill 20100616]
+	vnsubr(9): Remove recursive vnode locks. [hannken 20100618]
